errors/error_8.txt
In file included from src/drivers/audio/portaudio/stm32f4_pa.c:29:0:
build/base/include/drivers/audio/portaudio/waverecorder.h:68:13: error: 'WaveRecorder_GPIO_Init' declared 'static' but never defined [-Werror=unused-function]
 static void WaveRecorder_GPIO_Init(void);
             ^
build/base/include/drivers/audio/portaudio/waverecorder.h:69:13: error: 'WaveRecorder_SPI_Init' declared 'static' but never defined [-Werror=unused-function]
 static void WaveRecorder_SPI_Init(uint32_t Freq);
             ^
build/base/include/drivers/audio/portaudio/waverecorder.h:70:13: error: 'WaveRecorder_DMA_Init' declared 'static' but never defined [-Werror=unused-function]
 static void WaveRecorder_DMA_Init(void);
             ^
arm-none-eabi-ld -r -o build/base/obj/module/embox/net/core.o -N -g \
	./build/base/obj/src/net/inetdev.o
arm-none-eabi-objcopy --rename-section .text=.text.module.embox__net__core --rename-section .rodata=.rodata.module.embox__net__core --rename-section .data=.data.module.embox__net__core --rename-section .bss=.bss.module.embox__net__core build/base/obj/module/embox/net/core.o
arm-none-eabi-gcc  -pipe --debug-prefix-map=`pwd`= --debug-prefix-map=./= -fno-strict-aliasing -fno-common -Wall -Werror -Wundef -Wno-trigraphs -Wno-char-subscripts -Wno-misleading-indentation -Wno-nonnull-compare -Wformat -std=gnu99 -Os -g -Wno-maybe-uninitialized -mthumb -mlittle-endian -march=armv7e-m -mcpu=cortex-m4 -msoft-float -ffreestanding -U__linux__ -Ulinux -U__linux -D__EMBOX__ -D__unix -imacros build/base/gen/config.lds.h -Ibuild/base/include -I./src/include -I./src/arch/arm/include -Ibuild/base/gen/include -Ibuild/base/gen/src/include -Ibuild/base/gen/src/include -Ibuild/base/gen/src/arch/arm/include -I./platform/stm32f4/include -I./src/compat/linux/include -I./src/compat/posix/include -I./src/compat/libc/include -I/home/vagrant/Documents/embox_os/embox_pjsip_mic_git/src/compat/cxx/include -nostdinc -MMD -MP  -include build/base/gen/include/config/embox/net/socket.h -D__EMBUILD_MOD__=embox__net__socket -c -o build/base/obj/src/net/socket/ksocket.o src/net/socket/ksocket.c
arm-none-eabi-gcc  -pipe --debug-prefix-map=`pwd`= --debug-prefix-map=./= -fno-strict-aliasing -fno-common -Wall -Werror -Wundef -Wno-trigraphs -Wno-char-subscripts -Wno-misleading-indentation -Wno-nonnull-compare -Wformat -std=gnu99 -Os -g -Wno-maybe-uninitialized -mthumb -mlittle-endian -march=armv7e-m -mcpu=cortex-m4 -msoft-float -ffreestanding -U__linux__ -Ulinux -U__linux -D__EMBOX__ -D__unix -imacros build/base/gen/config.lds.h -Ibuild/base/include -I./src/include -I./src/arch/arm/include -Ibuild/base/gen/include -Ibuild/base/gen/src/include -Ibuild/base/gen/src/include -Ibuild/base/gen/src/arch/arm/include -I./platform/stm32f4/include -I./src/compat/linux/include -I./src/compat/posix/include -I./src/compat/libc/include -I/home/vagrant/Documents/embox_os/embox_pjsip_mic_git/src/compat/cxx/include -nostdinc -MMD -MP  -include build/base/gen/include/config/embox/net/socket.h -D__EMBUILD_MOD__=embox__net__socket -c -o build/base/obj/src/net/socket/socket_desc.o src/net/socket/socket_desc.c
cc1: error: unrecognized command line option '-Wno-nonnull-compare' [-Werror]
cc1: error: unrecognized command line option '-Wno-misleading-indentation' [-Werror]
cc1: all warnings being treated as errors
mk/image_lib.mk:33: recipe for target 'build/base/obj/src/drivers/audio/portaudio/stm32f4_pa.o' failed
make[4]: *** [build/base/obj/src/drivers/audio/portaudio/stm32f4_pa.o] Error 1
make[4]: *** Waiting for unfinished jobs....
mk/build.mk:19: recipe for target 'build' failed
make[3]: *** [build] Error 2
mk/load.mk:41: recipe for target 'build' failed
make[2]: *** [build] Error 2
mk/main.mk:30: recipe for target 'build' failed
make[1]: *** [build] Error 2
Makefile:37: recipe for target 'all' failed
make: *** [all] Error 2

